force-app/main/default/objects/ATI_Job__c/ATI_Job__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>