force-app/main/default/objects/ATI_Job__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account does not exist or has been rejected.</errorMessage>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ATI Jobs</relationshipLabel>
    <relationshipName>ATI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>