force-app/main/default/objects/ATI_Job__c/fields/Account_Executive_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field populated by trigger from the Opportunity&apos;s associated Contact record&apos;s Owner lookup field to indicate the Account Executive involved in the Opportunity. The purpose of this field is to allow for this value to be sent to Timberline easily without having to integrate with &apos;Opportunity Team&apos; separate object.</description>
    <label>Account Executive 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATIJOBSAE1</relationshipName>
    <type>Lookup</type>
</CustomField>