force-app/main/default/objects/ATI_Job__c/fields/Account_Executive_1_Timber__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_1_Timber__c</fullName>
    <description>Field used in Jitterbit mapping to sync with Timberline to indicate the primary Account Executive related to the Job.</description>
    <formula>if(!ISBLANK(Account_Executive_1__r.LastName), Account_Executive_1__r.LastName &amp; if(!ISBLANK(Account_Executive_1__r.FirstName ), &quot;, &quot; &amp; Account_Executive_1__r.FirstName,&quot;&quot; ) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive 1 Timber</label>
    <type>Text</type>
</CustomField>