force-app/main/default/objects/ATI_Job__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>Account_Executive__c</referenceTo>
    <relationshipLabel>ATI Jobs</relationshipLabel>
    <relationshipName>ATI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>