force-app/main/default/objects/ATI_Job__c/fields/Actual_Gross_Profit_JTD_NM_RS__c.field-meta.xml
<CustomField>
    <fullName>Actual_Gross_Profit_JTD_NM_RS__c</fullName>
    <label>Actual Gross Profit % (JTD-NM)</label>
    <summarizedField>Financial__c.Actual_Gross_Profit_JTD_NM__c</summarizedField>
    <summaryForeignKey>Financial__c.ATI_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>