force-app/main/default/objects/ATI_Job__c/fields/Actual_Job_Completion_Date1__c.field-meta.xml
<CustomField>
    <fullName>Actual_Job_Completion_Date1__c</fullName>
    <label>Actual Job Completion Date1</label>
    <type>Date</type>
</CustomField>