force-app/main/default/objects/ATI_Job__c/fields/Actual_Job_Completion_Date1Formula__c.field-meta.xml
<CustomField>
    <fullName>Actual_Job_Completion_Date1Formula__c</fullName>
    <formula>DATETIMEVALUE(Actual_Job_Completion_Date1__c) + 0.2917</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Job Completion Date1Formula</label>
    <type>DateTime</type>
</CustomField>