force-app/main/default/objects/ATI_Job__c/fields/Actual_Job_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Job_Completion_Date__c</fullName>
    <description>Program field</description>
    <inlineHelpText>Update XACT</inlineHelpText>
    <label>Actual Job Completion Date</label>
    <type>DateTime</type>
</CustomField>