force-app/main/default/objects/ATI_Job__c/fields/Actual_Start_Date1__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date1__c</fullName>
    <label>Actual Start Date1</label>
    <type>Date</type>
</CustomField>