force-app/main/default/objects/ATI_Job__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <description>for managed repair programs</description>
    <inlineHelpText>Update XACT</inlineHelpText>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>