force-app/main/default/objects/ATI_Job__c/fields/Add_Correct_Email__c.field-meta.xml
<CustomField>
    <fullName>Add_Correct_Email__c</fullName>
    <description>This field allows users to add or change an email address on the related Contact record from the Opportunity record.  This field is referenced by &apos;EmailUpdateOnJob&apos; trigger.</description>
    <label>Add/Correct Email</label>
    <type>Email</type>
</CustomField>