force-app/main/default/objects/ATI_Job__c/fields/Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if the address needs to
be verified</description>
    <inlineHelpText>Used to determine if the address needs to
be verified</inlineHelpText>
    <label>Address Verified</label>
    <type>Checkbox</type>
</CustomField>