force-app/main/default/objects/ATI_Job__c/fields/AE_1_Bonus__c.field-meta.xml
<CustomField>
    <fullName>AE_1_Bonus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE 1 Bonus</label>
    <referenceTo>AE_Bonus__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>ATIAEBonus1</relationshipName>
    <type>Lookup</type>
</CustomField>