force-app/main/default/objects/ATI_Job__c/fields/AE_1_percentage__c.field-meta.xml
<CustomField>
    <fullName>AE_1_percentage__c</fullName>
    <description>This percentage field is populated via Process Builder &apos;Opportunity Split percentage population&apos; flow to note what revenue percentage is allotted to the Account Executive 1 user.  Only Account Executives with a percentage value over 0 will be sent to Timberline.</description>
    <label>AE 1 percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>