force-app/main/default/objects/ATI_Job__c/fields/AE_2_Bonus__c.field-meta.xml
<CustomField>
    <fullName>AE_2_Bonus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE 2 Bonus</label>
    <referenceTo>AE_Bonus__c</referenceTo>
    <relationshipLabel>Jobs (AE 2 Bonus)</relationshipLabel>
    <relationshipName>ATIAEBonus2</relationshipName>
    <type>Lookup</type>
</CustomField>