force-app/main/default/objects/ATI_Job__c/fields/AE_Base_Name2__c.field-meta.xml
<CustomField>
    <fullName>AE_Base_Name2__c</fullName>
    <formula>IF(AND(Account_Executive_1__c != &#39;&#39;, Account_Executive_2__c = &#39;&#39;),Account_Executive_1__r.FirstName &amp; &#39; &#39; &amp; Account_Executive_1__r.LastName,IF(AND(Account_Executive_1__c != &#39;&#39;, Account_Executive_2__c != &#39;&#39;),Account_Executive_2__r.FirstName &amp; &#39; &#39; &amp; Account_Executive_2__r.LastName, Account_Executive_1__r.FirstName &amp; &#39; &#39; &amp; Account_Executive_1__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Base Name2</label>
    <type>Text</type>
</CustomField>