force-app/main/default/objects/ATI_Job__c/fields/AE_Base_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_Base_Name__c</fullName>
    <description>This formula field is to list all AE 1 Name</description>
    <formula>IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c = &apos;&apos;),Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName,IF(AND(Account_Executive_1__c != &apos;&apos;, Account_Executive_2__c != &apos;&apos;),Account_Executive_1__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_1__r.LastName, Account_Executive_2__r.FirstName &amp; &apos; &apos; &amp; Account_Executive_2__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE Base Name</label>
    <type>Text</type>
</CustomField>