force-app/main/default/objects/ATI_Job__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( OR(ISPICKVAL( Stage__c , &apos;Won&apos; ),ISPICKVAL( Stage__c , &apos;lost&apos;)) , CloseDate__c, TODAY()) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>