force-app/main/default/objects/ATI_Job__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date that Insurance approved estimate for repair.  Managed Repair Program Admin to update.</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>