force-app/main/default/objects/ATI_Job__c/fields/Assigned_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Complete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Complete</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs4</relationshipName>
    <type>Lookup</type>
</CustomField>