force-app/main/default/objects/ATI_Job__c/fields/ATI_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ATI_Phone_Number__c</fullName>
    <defaultValue>&quot;(714)283-9990&quot;</defaultValue>
    <label>ATI Phone Number</label>
    <type>Phone</type>
</CustomField>