force-app/main/default/objects/ATI_Job__c/fields/BD_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BD_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>