force-app/main/default/objects/ATI_Job__c/fields/BigTime_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>BigTime_Last_Sync__c</fullName>
    <label>BigTime Last Sync</label>
    <type>DateTime</type>
</CustomField>