force-app/main/default/objects/ATI_Job__c/fields/Billing_Complete_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Complete_Count__c</fullName>
    <description>Job Stage Count when stage is Billing Complete</description>
    <formula>IF(ISPICKVAL( Stage__c ,&quot;Billing Complete&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Complete Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>