force-app/main/default/objects/ATI_Job__c/fields/Billing_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Complete_Date__c</fullName>
    <description>Date/Time field to record when the job is updated to Billing Complete stage for reporting purposes.</description>
    <label>Billing Complete Date</label>
    <type>DateTime</type>
</CustomField>