force-app/main/default/objects/ATI_Job__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field to note the Branch Manager that will need to assign a PM to the job.</description>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATIJobBM</relationshipName>
    <type>Lookup</type>
</CustomField>