force-app/main/default/objects/ATI_Job__c/fields/Budget_Completed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to note when a Superintendent has completed a budget form related to the job.</description>
    <label>Budget Completed</label>
    <type>Checkbox</type>
</CustomField>