force-app/main/default/objects/ATI_Job__c/fields/Budget_Exists__c.field-meta.xml
<CustomField>
    <fullName>Budget_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Exists</label>
    <type>Checkbox</type>
</CustomField>