force-app/main/default/objects/ATI_Job__c/fields/Business_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Manager__c</fullName>
    <description>This field is used for reporting on BDM.</description>
    <formula>IF(NOT(ISBLANK(Account_Executive_1__c)), Account_Executive_1__r.FirstName +&quot; &quot;+ Account_Executive_1__r.LastName,&quot;&quot;)+BR() + 

IF(NOT(ISBLANK(Account_Executive_2__c)), Account_Executive_2__r.FirstName +&quot; &quot;+ Account_Executive_2__r.LastName, &quot;&quot;)</formula>
    <label>Business Development Manager</label>
    <type>Text</type>
</CustomField>