force-app/main/default/objects/ATI_Job__c/fields/Carrier_Id_Non_Programs__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Id_Non_Programs__c</fullName>
    <formula>$Label.Carrier_Id_Non_Programs</formula>
    <label>Carrier Id -- Non Programs</label>
    <type>Text</type>
</CustomField>