force-app/main/default/objects/ATI_Job__c/fields/CAT_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>CAT_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAT Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>