force-app/main/default/objects/ATI_Job__c/fields/Cause_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Loss__c</fullName>
    <description>Created by DemandBlue as part of Xact Integration</description>
    <label>Cause of Loss</label>
    <length>100</length>
    <type>Text</type>
</CustomField>