force-app/main/default/objects/ATI_Job__c/fields/Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_Phone__c</fullName>
    <description>Project Site Contact&apos;s cell phone from Contact record</description>
    <formula>Project_Site_Contact_Name__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cell Phone</label>
    <type>Text</type>
</CustomField>