force-app/main/default/objects/ATI_Job__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <description>Field to indicate claim number for jobs that will be covered by insurance.</description>
    <label>Claim #</label>
    <length>45</length>
    <type>Text</type>
</CustomField>