force-app/main/default/objects/ATI_Job__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <description>Collector from Project Managers User record</description>
    <formula>IF(AND( ISPICKVAL( Lead_Source__c , &apos;National Account (ERA, Contract, Etc)&apos;), Default_Collector__c &lt;&gt; TRUE) , &apos;Cassandra O`Neill&apos;, 
IF(AND( Default_Collector__c &lt;&gt; TRUE, OR 
(ISPICKVAL( Lead_Source__c , &apos;Program - Lionsbridge&apos;),
ISPICKVAL( Lead_Source__c , &apos;Program - Alacrity Services&apos;),
ISPICKVAL( Lead_Source__c , &apos;Program - Alacrity Consumer Services&apos;)
)
), &apos;Alicia Sierra&apos;, 
IF (Default_Collector__c = TRUE, Project_Manager__r.Collector__r.FirstName &amp; &quot; &quot; &amp; Project_Manager__r.Collector__r.LastName , Project_Manager__r.Collector__r.FirstName &amp; &quot; &quot; &amp; Project_Manager__r.Collector__r.LastName ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector</label>
    <type>Text</type>
</CustomField>