force-app/main/default/objects/ATI_Job__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Belfor</fullName>
            </value>
            <value>
                <fullName>Blue Sky Restoration</fullName>
            </value>
            <value>
                <fullName>BMS Cat</fullName>
            </value>
            <value>
                <fullName>Coit</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>DKI</fullName>
            </value>
            <value>
                <fullName>Northstar</fullName>
            </value>
            <value>
                <fullName>Polygon</fullName>
            </value>
            <value>
                <fullName>Harbro</fullName>
            </value>
            <value>
                <fullName>Interstate Restoration</fullName>
            </value>
            <value>
                <fullName>Miller</fullName>
            </value>
            <value>
                <fullName>Serv-Pro</fullName>
            </value>
            <value>
                <fullName>Service Master</fullName>
            </value>
            <value>
                <fullName>Paul Davis Systems</fullName>
            </value>
            <value>
                <fullName>PW Stevens</fullName>
            </value>
            <value>
                <fullName>Puroclean</fullName>
            </value>
            <value>
                <fullName>NCRI-National Catastrophe Restoration</fullName>
            </value>
            <value>
                <fullName>Rainbow International</fullName>
            </value>
            <value>
                <fullName>RMC Group, LLC</fullName>
            </value>
            <value>
                <fullName>Steamatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>