force-app/main/default/objects/ATI_Job__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date that the Job&apos;s Stage is set to Complete</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>