force-app/main/default/objects/ATI_Job__c/fields/Completion_minus_Estimate_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_minus_Estimate_Date__c</fullName>
    <description>Completion Date minus Date Taken</description>
    <formula>Completion_Date__c  -  Date_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion - Created Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>