force-app/main/default/objects/ATI_Job__c/fields/Completion_Year__c.field-meta.xml
<CustomField>
    <fullName>Completion_Year__c</fullName>
    <formula>YEAR ( Completion_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>