force-app/main/default/objects/ATI_Job__c/fields/Complex_Loss__c.field-meta.xml
<CustomField>
    <fullName>Complex_Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Loss</label>
    <type>Checkbox</type>
</CustomField>