force-app/main/default/objects/ATI_Job__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATI_Jobs3</relationshipName>
    <type>Lookup</type>
</CustomField>