force-app/main/default/objects/ATI_Job__c/fields/Consulting_Division_Referral__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Division_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gives credit to consulting division for referral</description>
    <label>Consulting Division Referral</label>
    <type>Checkbox</type>
</CustomField>