force-app/main/default/objects/ATI_Job__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to link the primary Contact of the Job to the Opportunity</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs (Contact)</relationshipLabel>
    <relationshipName>ATIContact</relationshipName>
    <type>Lookup</type>
</CustomField>