force-app/main/default/objects/ATI_Job__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <label>Contact Info</label>
    <type>TextArea</type>
</CustomField>