force-app/main/default/objects/ATI_Job__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContractId</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ATI Jobs</relationshipLabel>
    <relationshipName>ATI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>