force-app/main/default/objects/ATI_Job__c/fields/CopyPMToOwner__c.field-meta.xml
<CustomField>
    <fullName>CopyPMToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CopyPMToOwner</label>
    <type>Checkbox</type>
</CustomField>