force-app/main/default/objects/ATI_Job__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <defaultValue>&quot;1000&quot;</defaultValue>
    <description>Field to indicate Cost Code-- default to 1000</description>
    <label>Cost Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>