force-app/main/default/objects/ATI_Job__c/fields/Count_for_Jobs_25_GP__c.field-meta.xml
<CustomField>
    <fullName>Count_for_Jobs_25_GP__c</fullName>
    <formula>IF(Actual_Gross_Profit_JTD_NM_RS__c &gt; 0.25, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count for Jobs &gt; 25% GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>