force-app/main/default/objects/ATI_Job__c/fields/Current_GP__c.field-meta.xml
<CustomField>
    <fullName>Current_GP__c</fullName>
    <description>This calculates current GP% based on Amount field</description>
    <formula>( Amount__c -  Job_to_Date_Costs_Next_Month_Costs_RS__c )/  Amount__c</formula>
    <label>Current GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>