force-app/main/default/objects/ATI_Job__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ATI Jobs (Customer)</relationshipLabel>
    <relationshipName>ATI_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>