force-app/main/default/objects/ATI_Job__c/fields/Customer_Contacted1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted1__c</fullName>
    <label>Customer Contacted1</label>
    <type>Date</type>
</CustomField>