force-app/main/default/objects/ATI_Job__c/fields/Customer_Contacted1Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted1Formula__c</fullName>
    <formula>DATETIMEVALUE( Customer_Contacted1__c) + 0.2916666666666667</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contacted1Formula</label>
    <type>DateTime</type>
</CustomField>