force-app/main/default/objects/ATI_Job__c/fields/Customer_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contacted__c</fullName>
    <description>Date when PD makes the first contact with the Customer.  Managed Repair Program Admin to enter.</description>
    <inlineHelpText>Update XACT</inlineHelpText>
    <label>Customer Contacted</label>
    <type>DateTime</type>
</CustomField>