force-app/main/default/objects/ATI_Job__c/fields/Data_Set__c.field-meta.xml
<CustomField>
    <fullName>Data_Set__c</fullName>
    <formula>CASE(
Job_Class__c,
&quot;Residential&quot;, &quot;Residential&quot;,
&quot;Multi-Family&quot;, &quot;Commercial&quot;,
&quot;Commercial&quot;, &quot;Commercial&quot;,
&quot;Retail&quot;, &quot;Commercial&quot;,
&quot;Educational&quot;, &quot;Commercial&quot;,
&quot;Healthcare&quot;, &quot;Commercial&quot;,
&quot;Hospitality&quot;, &quot;Commercial&quot;,
&quot;Manufacturing&quot;, &quot;Commercial&quot;,
&quot;Municipality/ Gov&apos;t&quot;, &quot;Commercial&quot;,
&quot;GSA&quot;, &quot;Commercial&quot;,
&quot;Religious&quot;, &quot;Commercial&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Set</label>
    <type>Text</type>
</CustomField>