force-app/main/default/objects/ATI_Job__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <description>Created by DemandBlue as part of Xact Integration</description>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>