force-app/main/default/objects/ATI_Job__c/fields/Date_Final_Photos_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Final_Photos_Uploaded__c</fullName>
    <description>used for managed repair programs</description>
    <label>Date Final Photos Uploaded</label>
    <type>Date</type>
</CustomField>