force-app/main/default/objects/ATI_Job__c/fields/Date_Initial_Photos_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Initial_Photos_Uploaded__c</fullName>
    <label>Date Initial Photos Uploaded</label>
    <type>Date</type>
</CustomField>